# wtime

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py  wtime.py
.github/workflows/: test.yaml
tests/: test_time_format.py  test_wtime.py
wtime/: time_format.py  wtime.py
