[build-system]
requires = [
    "setuptools >= 40.9.0",
    "wheel"
]
build_backend = "setuptools.build_meta"


[tool.pylint.MESSAGE_CONTROL]
disable = ["missing-module-docstring",
         "missing-class-docstring",
         "missing-function-docstring",
         "import-error",
         "wrong-import-order",
         "too-few-public-methods"]

[tool.pylint.TYPECHECK]
max-line-length = 79

[tool.pylint.SIMILARITIES]
ignore-imports=true